--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+    version: ^0.0.0
   provider: ^6.0.5
+  intl: ^0.18.0
+  dio: ^4.0.4
+  shared_preferences: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -53,6 +59,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
